<resources>
    <string name="app_name">Yep!</string>

    <string name="txt_subtitulo">DO I KNOW YOU?</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="txt_username">Username</string>
    <string name="txt_pass">Password</string>
    <string name="btn_entrar">LOGIN</string>
    <string name="texto_registro">have an account? Sign up here!</string>
    <string name="title_activity_main">Yep!</string>

    <string name="action_a">icono_a</string>
    <string name="action_b">icono_b</string>
</resources>
